- Explicit `--adapter image` routing is now strict and fails closed when extension/header evidence mismatches (`IMAGE_FORMAT_MISMATCH`) instead of returning partial-success image summaries.
- Explicit `--adapter package` routing is now strict for `.exe` and ZIP-backed package containers (`.msix/.nupkg/.whl/.jar`), failing closed on extension/container mismatch (`PACKAGE_FORMAT_MISMATCH`) instead of returning partial package summaries.
- Explicit `--adapter package` routing now also requires package-specific ZIP structure evidence for `.msix/.nupkg/.whl/.jar` (for example manifest/metadata entries), failing closed with `PACKAGE_FORMAT_MISMATCH` on generic ZIP payloads.
- Explicit `--adapter package` routing strictness now also covers `.deb` and `.rpm`, failing closed on invalid container/header evidence (`PACKAGE_FORMAT_MISMATCH`) instead of returning partial package summaries.
- Explicit `--adapter package` routing for `.deb` now also requires Debian package structure entries (`debian-binary`, `control.tar*`, `data.tar*`), failing closed with `PACKAGE_FORMAT_MISMATCH` when missing.
- Explicit `--adapter package` routing for `.rpm` now requires both RPM lead magic and signature-header magic in explicit analysis, failing closed with `PACKAGE_FORMAT_MISMATCH` when either is missing.
- Explicit `--adapter package` routing strictness now also covers `.msi`, failing closed on invalid CFB header evidence (`PACKAGE_FORMAT_MISMATCH`) instead of returning partial package summaries.
- Explicit `--adapter package` routing strictness now also covers `.appimage`, `.pkg`, and `.dmg`, failing closed on invalid header/trailer evidence (`PACKAGE_FORMAT_MISMATCH`) instead of returning partial package summaries.
- Explicit `--adapter package` routing for `.dmg` now requires `koly` at canonical trailer offset (file-end minus 512) in explicit analysis, failing closed with `PACKAGE_FORMAT_MISMATCH` when marker placement is invalid.