@@ -35,7 +35,7 @@ Adapter classes
   PACKAGE_SIGNING_INFO_UNAVAILABLE
   EXECUTION_WITHHELD_INSTALLER
 - Route strictness:
-  explicit `--adapter package` now fails closed when package/container evidence mismatches (for example invalid `.msi` CFB header, invalid `.exe` PE header, invalid ZIP-backed package containers, missing package-specific ZIP structure evidence for `.msix/.nupkg/.whl/.jar`, missing required Debian package entries for `.deb`, invalid `.rpm` lead/signature-header evidence, missing `.appimage` ELF/AppImage marker evidence, or invalid `.pkg`/`.dmg` header-trailer evidence). `.pkg` strict mode requires minimally valid XAR header fields and `.dmg` strict mode requires `koly` at canonical trailer offset (file-end minus 512). Explicit compressed tar package formats (`.tgz/.tar.gz/.txz/.tar.xz`) now require `--enable-plugin tar` and fail closed when unavailable.
+  explicit `--adapter package` now fails closed when package/container evidence mismatches (for example invalid `.msi` CFB header, invalid `.exe` PE header, invalid ZIP-backed package containers, missing package-specific ZIP structure evidence for `.msix/.nupkg/.whl/.jar`, missing required Debian package entries for `.deb`, invalid `.rpm` lead/signature-header evidence, missing `.appimage` ELF/runtime marker evidence, or invalid `.pkg`/`.dmg` header-trailer evidence). `.appimage` strict mode requires ELF header plus AppImage runtime marker at canonical offset, `.pkg` strict mode requires minimally valid XAR header fields, and `.dmg` strict mode requires `koly` at canonical trailer offset (file-end minus 512). Explicit compressed tar package formats (`.tgz/.tar.gz/.txz/.tar.xz`) now require `--enable-plugin tar` and fail closed when unavailable.
 
 3) extension
 - Formats: .crx, .vsix, .xpi, unpacked extension folder with manifest.json
@@ -94,7 +94,7 @@ Adapter classes
   IMAGE_TABLE_TRUNCATED
   IMAGE_FORMAT_MISMATCH
 - Route strictness:
-  explicit `--adapter image` fails closed when extension/header evidence does not match.
+  explicit `--adapter image` fails closed when extension/header evidence does not match, including unsupported `.qcow2` versions and weak `.vmdk` descriptor-only hints that lack structural evidence.
 
 8) scm (baseline signal lane)
 - Formats: local git trees
